--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     <br>
                     <br>
                     <div class="img-c">
-                        <img src="https://pngset.com/images/cartoon-people-cartoon-guy-no-background-cartoon-man-with-money-clothing-apparel-shirt-face-transparent-png-2574726.png" >
+                        <img src="https://thumbs.dreamstime.com/b/cartoon-business-man-standing-businessman-isolated-white-background-cartoon-business-man-standing-businessman-isolated-white-106366902.jpg" >
                         </div>
                     <div class="row">
                         <h2><b>It’s more than just weight loss!</b></h2>
