--- a/index.html
+++ b/index.html
@@ -280,10 +280,11 @@
                     <br>
                     <br>
                     <div class="img-c">
-                        <img src="https://thumbs.dreamstime.com/b/cartoon-business-man-standing-businessman-isolated-white-background-cartoon-business-man-standing-businessman-isolated-white-106366902.jpg" >
+                        <img class="img-fluid" src="https://thumbs.dreamstime.com/b/cartoon-business-man-standing-businessman-isolated-white-background-cartoon-business-man-standing-businessman-isolated-white-106366902.jpg" >
                         </div>
                     <div class="row">
                         <h2><b>It’s more than just weight loss!</b></h2>
+                        <br>
                         <h1><b>WE’RE REDEFINING FITNESS!</b></h1>
                         
                         <p style="font-size: 18px;width: 50%">
