--- a/index.html
+++ b/index.html
@@ -284,8 +284,10 @@
                         </div>
                     <div class="row">
                         <h2><b>It’s more than just weight loss! </b></h2>
+                 </div>
                         <br>
                      <br>
+                 <div class="row">
                         <h1><b>WE’RE REDEFINING FITNESS!</b></h1>
                         
                         <p style="font-size: 18px;width: 50%">
